--- a/cv_od/listener/package.xml
+++ b/cv_od/listener/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>listener</name>
+  <name>cv_listener</name>
   <version>0.0.0</version>
   <description>The listener package</description>
 
