--- a/embedded/talker_py/CMakeLists.txt
+++ b/embedded/talker_py/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(talker_py)
+project(embedded_talker_py)
 
 find_package(catkin REQUIRED COMPONENTS
     rospy
