--- a/embedded/talker_py/package.xml
+++ b/embedded/talker_py/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>talker_py</name>
+  <name>embedded_talker_py</name>
   <version>0.0.0</version>
   <description>The talker_py package</description>
 
