Add docs to package.xml's
Signed-off-by: Christopher Strøm <detoxte@gmail.com>

--- a/tutorial_packages/listener/package.xml
+++ b/tutorial_packages/listener/package.xml
@@ -10,4 +10,6 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <!-- This is an example of how you *technically* dont need to add build
+  and exec depends here, but it's very bad practice not to!!!!!!!!!-->
 </package>
