--- a/tutorial_packages/talker_cpp/package.xml
+++ b/tutorial_packages/talker_cpp/package.xml
@@ -4,12 +4,24 @@
   <version>0.0.0</version>
   <description>The talker_cpp package</description>
 
+  <!-- Add your email/name here :) -->
   <maintainer email="detoxte@gmail.com">strom</maintainer>
 
+  <!-- For our public project, we have stuck with an MIT license.
+  I added The Unlicense to this since it is only a tutorial :^) -->
   <license>The Unlicense</license>
+
+  <!-- Catkin will check for the packages you define below when building.
+  If you do not have one or more packages installed (or sourced!), the build
+  will fail. -->
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <!-- The packages below should reflect what you have added to find_package()
+  in the CMakeLists.txt of the package. Adding all packages from find_package()
+  to *both* build_depend and exec_depend is not always needed, but it's usually
+  the easiest. Note that you shouldn't added packages you end up not using here
+  - see the above comment-->
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
