--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,9 @@
 version: '3.8'
 services:
   tutorial:
-    container_name: tutorial
-    image: vortex:tutorial # Task 2
-    tty: true # Task 2
-    stdin_open: true # Task 2
+    container_name:
+    image: 
 
-  tutorial-two:
-    container_name: tutorial2
-    image: vortex:tutorial
+    # The below fields is equivalent to -it in docker run
     tty: true 
     stdin_open: true 
-    #entrypoint: ["/bin/bash"]
