--- a/tutorial_packages/listener/CMakeLists.txt
+++ b/tutorial_packages/listener/CMakeLists.txt
@@ -1,14 +1,30 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.5)
 project(listener)
 
-find_package(catkin REQUIRED
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 17)
+endif()
+
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(geometry_msgs REQUIRED)
+
+add_executable(listener_node src/listener_ros.cpp)
+ament_target_dependencies(listener_node rclcpp geometry_msgs)
+
+target_include_directories(listener_node PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
 
-catkin_package(
-
+install(TARGETS
+    listener_node
+    DESTINATION lib/${PROJECT_NAME}
 )
 
-include_directories(
-    ${catkin_INCLUDE_DIRS}
+install(
+    DIRECTORY include/
+    DESTINATION include
 )
+
+ament_package()
 
