--- a/tutorial_packages/frames/package.xml
+++ b/tutorial_packages/frames/package.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>frames</name>
   <version>0.0.0</version>
   <description>The frames package</description>
-
-
-  <maintainer email="detoxte@gmail.com">strom</maintainer>
-
+  <maintainer email="jorgen.fjermedal@hotmail.com">jorgen fjermedal</maintainer>
   <license>The Unlicense</license>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <depend>rclcpp</depend>
+  <depend>tf2_ros</depend>
+  <depend>geometry_msgs</depend>
 
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
