--- a/my_subscriber/package.xml
+++ b/my_subscriber/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>my_package</name>
+  <name>my_subscriber</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="philliab@stud.ntnu.no">philliab</maintainer>
@@ -14,10 +14,6 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
-
-  <exec_depend>launch</exec_depend>
-<exec_depend>launch_ros</exec_depend>
-
 
   <export>
     <build_type>ament_cmake</build_type>
