--- a/my_package/CMakeLists.txt
+++ b/my_package/CMakeLists.txt
@@ -33,3 +33,7 @@ install(TARGETS
   new_node
   DESTINATION lib/${PROJECT_NAME}
 )
+install(DIRECTORY 
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
